# ClawInc

./: .gitignore  LICENSE  README.en.md  README.md  SPEC.md  package-lock.json  package.json  vite.config.ts
.specify/memory/: constitution.md
specs/001-agent-hire-fire/: spec.md
specs/001-agent-hire-fire/checklists/: requirements.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs
src/components/: CompanyNameModal.tsx  CompanyPanel.tsx  CreateCompanyModal.tsx  HireAgentModal.tsx  ParkCanvas.tsx  RecruitAgentModal.tsx  TableNode.tsx  TalentMarketplace.tsx
src/store/: useParkStore.ts
src/types/: index.ts
src/utils/: openclawAgents.ts  persistence.ts
